WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172735
Keyboard autocorrections do not apply with an active selection (but keyboard acts like they did)
https://bugs.webkit.org/show_bug.cgi?id=172735
Summary
Keyboard autocorrections do not apply with an active selection (but keyboard ...
Tim Horton
Reported
2017-05-30 15:08:52 PDT
Keyboard autocorrections do not apply with an active selection (but keyboard acts like they did)
Attachments
Patch
(14.83 KB, patch)
2017-05-30 15:09 PDT
,
Tim Horton
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-05-30 15:09:09 PDT
Created
attachment 311544
[details]
Patch
Enrica Casucci
Comment 2
2017-05-30 15:49:08 PDT
Comment on
attachment 311544
[details]
Patch Looks good to me.
Tim Horton
Comment 3
2017-05-30 17:44:17 PDT
https://trac.webkit.org/changeset/217587/webkit
Radar WebKit Bug Importer
Comment 4
2017-05-30 20:16:20 PDT
<
rdar://problem/32479608
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug