Keyboard autocorrections do not apply with an active selection (but keyboard acts like they did) https://bugs.webkit.org/show_bug.cgi?id=172735 <rdar://problem/32015977>

Reviewed by Enrica Casucci.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView applyAutocorrection:toString:withCompletionHandler:]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
Expose applyAutocorrection on the WKTesting category for use from UIScriptController.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::syncApplyAutocorrection):
If there is a range selection and it precisely matches the autocorrection's "before"
string, allow the autocorrection to take place.

* DumpRenderTree/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::applyAutocorrection):
* TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
(WTR::UIScriptController::applyAutocorrection):
* TestRunnerShared/UIScriptContext/UIScriptController.h:
* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::applyAutocorrection):
Expose applyAutocorrection to UIScriptController. Use a WKTesting method
because I don't know how to tap the button in the autocorrection bar from a test.

* fast/events/ios/autocorrect-with-range-selection-expected.txt: Added.
* fast/events/ios/autocorrect-with-range-selection.html: Added.
Add a test that ensures that autocorrection with a selection succeeds.


Canonical link: https://commits.webkit.org/189636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217587 268f45cc-cd09-0410-ab3c-d52691b4dbfc